samples/_failures_safe/1761454998_8b3e77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f79c7c7.c: In function ‘main’:
./samples/SAFE/__tmp_6f79c7c7.c:135:20: error: missing terminating " character
  135 |             printf("Added: %s [%
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_6f79c7c7.c:135:13: error: expected expression at end of input
  135 |             printf("Added: %s [%
      |             ^~~~~~
./samples/SAFE/__tmp_6f79c7c7.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f79c7c7.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f79c7c7.c:135:13: error: expected declaration or statement at end of input
